--- a/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
+++ b/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Authors>Daniel Martin</Authors>
+    <Company>danielDevelops</Company>
+    <Description>This is a middleware that will persist user permissions to memory, manage claims, and support Windows pass through authentication with forms authentication.</Description>
+    <Copyright>© 2017 danielDevelops</Copyright>
+    <PackageProjectUrl>https://github.com/wd-martin/soteria</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/wd-martin/soteria/tree/master/Soteria</RepositoryUrl>
+    <RepositoryType>GIT</RepositoryType>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
