--- a/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
+++ b/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
@@ -8,12 +8,12 @@
     <Company>danielDevelops</Company>
     <Description>This is a middleware that will persist user permissions to memory, manage claims, and support Windows pass through authentication with forms authentication.</Description>
     <Copyright>© 2017 danielDevelops</Copyright>
-    <PackageProjectUrl>https://github.com/wd-martin/soteria</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/wd-martin/soteria/tree/master/Soteria</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/danielDevelops/soteria</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/danielDevelops/soteria/tree/master/Soteria</RepositoryUrl>
     <RepositoryType>GIT</RepositoryType>
-    <Version>2.3.1</Version>
-    <AssemblyVersion>2.3.1.0</AssemblyVersion>
-    <FileVersion>2.3.1.0</FileVersion>
+    <Version>3.0</Version>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
