--- a/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
+++ b/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
@@ -1,44 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>
-			netstandard2.0
-		</TargetFramework>
-		<GeneratePackageOnBuild>
-			true
-		</GeneratePackageOnBuild>
-		<PackageRequireLicenseAcceptance>
-			false
-		</PackageRequireLicenseAcceptance>
-		<Authors>
-			Daniel Martin
-		</Authors>
-		<Company>
-			danielDevelops
-		</Company>
-		<Description>
-			This is a middleware that will persist user permissions to memory, manage claims, and support Windows pass through authentication with forms authentication.
-		</Description>
-		<Copyright>
-			© 2017 danielDevelops
-		</Copyright>
-		<PackageProjectUrl>
-			https://github.com/danielDevelops/soteria
-		</PackageProjectUrl>
-		<RepositoryUrl>
-			https://github.com/danielDevelops/soteria/tree/master/Soteria
-		</RepositoryUrl>
-		<RepositoryType>
-			GIT
-		</RepositoryType>
-		<Version>
-			3.2.0
-		</Version>
-		<AssemblyVersion>
-			3.2.0.0
-		</AssemblyVersion>
-		<FileVersion>
-			3.2.0.0
-		</FileVersion>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<Authors>Daniel Martin</Authors>
+		<Company>danielDevelops</Company>
+		<Description>This is a middleware that will persist user permissions to memory, manage claims, and support Windows pass through authentication with forms authentication.</Description>
+		<Copyright>© 2019 danielDevelops</Copyright>
+		<PackageProjectUrl>https://github.com/danielDevelops/soteria</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/danielDevelops/soteria/tree/master/Soteria</RepositoryUrl>
+		<RepositoryType>GIT</RepositoryType>
+		<Version>3.3.4</Version>
+		<AssemblyVersion>3.3.4.0</AssemblyVersion>
+		<FileVersion>3.3.4.0</FileVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
