--- a/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
+++ b/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -6,13 +6,13 @@
 		<Authors>Daniel Martin</Authors>
 		<Company>danielDevelops</Company>
 		<Description>This is a middleware that will persist user permissions to memory, manage claims, and support Windows pass through authentication with forms authentication.</Description>
-		<Copyright>© 2019 danielDevelops</Copyright>
+		<Copyright>© 2020 danielDevelops</Copyright>
 		<PackageProjectUrl>https://github.com/danielDevelops/soteria</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/danielDevelops/soteria/tree/master/Soteria</RepositoryUrl>
 		<RepositoryType>GIT</RepositoryType>
-		<Version>4.0.0</Version>
-		<AssemblyVersion>4.0.0.0</AssemblyVersion>
-		<FileVersion>4.0.0.0</FileVersion>
+		<Version>4.1.1</Version>
+		<AssemblyVersion>4.1.1.0</AssemblyVersion>
+		<FileVersion>4.1.1.0</FileVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
