--- a/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
+++ b/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
@@ -10,9 +10,10 @@
 		<PackageProjectUrl>https://github.com/danielDevelops/soteria</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/danielDevelops/soteria/tree/master/Soteria</RepositoryUrl>
 		<RepositoryType>GIT</RepositoryType>
-		<Version>4.1.1</Version>
-		<AssemblyVersion>4.1.1.0</AssemblyVersion>
-		<FileVersion>4.1.1.0</FileVersion>
+		<Version>5.1.0</Version>
+		<AssemblyVersion>5.1.0.0</AssemblyVersion>
+		<FileVersion>5.1.0.0</FileVersion>
+		<PackageReleaseNotes>This adds Session Guid verification.</PackageReleaseNotes>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
