--- a/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
+++ b/Soteria/Soteria.AuthenticationMiddleware/Soteria.AuthenticationMiddleware.csproj
@@ -1,26 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<Authors>Daniel Martin</Authors>
 		<Company>danielDevelops</Company>
 		<Description>This is a middleware that will persist user permissions to memory, manage claims, and support Windows pass through authentication with forms authentication.</Description>
-		<Copyright>© 2020 danielDevelops</Copyright>
+		<Copyright>© 2021 danielDevelops</Copyright>
 		<PackageProjectUrl>https://github.com/danielDevelops/soteria</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/danielDevelops/soteria/tree/master/Soteria</RepositoryUrl>
 		<RepositoryType>GIT</RepositoryType>
-		<Version>5.1.1</Version>
-		<AssemblyVersion>5.1.1.0</AssemblyVersion>
-		<FileVersion>5.1.1.0</FileVersion>
+		<Version>6.0</Version>
+		<AssemblyVersion>6.0.0.0</AssemblyVersion>
+		<FileVersion>6.0.0.0</FileVersion>
 		<PackageReleaseNotes>This adds Session Guid verification.</PackageReleaseNotes>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="5.0.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.2.1" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
 	</ItemGroup>
 </Project>
